MSCommunity cross_feeding figure

--- a/examples/Community Modeling/MSSteadyCom/network_diagram.ipynb
+++ b/examples/Community Modeling/MSSteadyCom/network_diagram.ipynb
@@ -391,7 +391,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 123,
+   "id": "8a90f23f-5224-408d-8d69-2e0045d57e67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from modelseedpy.biochem import from_local\n",
+    "\n",
+    "msdb = from_local(\"../../../../ModelSEEDDatabase\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "id": "f664c6e2-3b13-433c-9753-77f47d4747af",
    "metadata": {},
    "outputs": [
@@ -405,16 +417,16 @@
       "\tsubgraph mets {\n",
       "\t\trank=same\n",
       "\t\tnode [color=green shape=circle style=filled]\n",
-      "\t\t1 [URL=\"https://modelseed.org/biochem/compounds/cpd00001\" fixedsize=true height=0.5 tooltip=cpd00001]\n",
-      "\t\t9 [URL=\"https://modelseed.org/biochem/compounds/cpd00009\" fixedsize=true height=0.5 tooltip=cpd00009]\n",
-      "\t\t20 [URL=\"https://modelseed.org/biochem/compounds/cpd00020\" fixedsize=true height=0.5 tooltip=cpd00020]\n",
-      "\t\t39 [URL=\"https://modelseed.org/biochem/compounds/cpd00039\" fixedsize=true height=0.5 tooltip=cpd00039]\n",
-      "\t\t54 [URL=\"https://modelseed.org/biochem/compounds/cpd00054\" fixedsize=true height=0.5 tooltip=cpd00054]\n",
-      "\t\t65 [URL=\"https://modelseed.org/biochem/compounds/cpd00065\" fixedsize=true height=0.5 tooltip=cpd00065]\n",
-      "\t\t107 [URL=\"https://modelseed.org/biochem/compounds/cpd00107\" fixedsize=true height=0.5 tooltip=cpd00107]\n",
-      "\t\t119 [URL=\"https://modelseed.org/biochem/compounds/cpd00119\" fixedsize=true height=0.5 tooltip=cpd00119]\n",
-      "\t\t132 [URL=\"https://modelseed.org/biochem/compounds/cpd00132\" fixedsize=true height=0.5 tooltip=cpd00132]\n",
-      "\t\t221 [URL=\"https://modelseed.org/biochem/compounds/cpd00221\" fixedsize=true height=0.5 tooltip=cpd00221]\n",
+      "\t\t1 [URL=\"https://modelseed.org/biochem/compounds/cpd00001\" fixedsize=true height=0.5 tooltip=H2O]\n",
+      "\t\t9 [URL=\"https://modelseed.org/biochem/compounds/cpd00009\" fixedsize=true height=0.5 tooltip=Phosphate]\n",
+      "\t\t20 [URL=\"https://modelseed.org/biochem/compounds/cpd00020\" fixedsize=true height=0.5 tooltip=Pyruvate]\n",
+      "\t\t39 [URL=\"https://modelseed.org/biochem/compounds/cpd00039\" fixedsize=true height=0.5 tooltip=\"L-Lysine\"]\n",
+      "\t\t54 [URL=\"https://modelseed.org/biochem/compounds/cpd00054\" fixedsize=true height=0.5 tooltip=\"L-Serine\"]\n",
+      "\t\t65 [URL=\"https://modelseed.org/biochem/compounds/cpd00065\" fixedsize=true height=0.5 tooltip=\"L-Tryptophan\"]\n",
+      "\t\t107 [URL=\"https://modelseed.org/biochem/compounds/cpd00107\" fixedsize=true height=0.5 tooltip=\"L-Leucine\"]\n",
+      "\t\t119 [URL=\"https://modelseed.org/biochem/compounds/cpd00119\" fixedsize=true height=0.5 tooltip=\"L-Histidine\"]\n",
+      "\t\t132 [URL=\"https://modelseed.org/biochem/compounds/cpd00132\" fixedsize=true height=0.5 tooltip=\"L-Asparagine\"]\n",
+      "\t\t221 [URL=\"https://modelseed.org/biochem/compounds/cpd00221\" fixedsize=true height=0.5 tooltip=\"D-Lactate\"]\n",
       "\t}\n",
       "\tS1 [label=Species2]\n",
       "\tsubgraph members {\n",
@@ -451,7 +463,7 @@
        "'test_network.svg'"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,8 +490,10 @@
     "    metNum = ord(\"A\")\n",
     "    for metIndex, metID in enumerate(metabolites):\n",
     "        # letter = chr(metNum+metIndex)\n",
-    "        cpdNum = str(int(metID.replace(\"cpd\", \"\").replace(\"_e0\", \"\")))\n",
-    "        mets_subgraph.node(cpdNum, fixedsize=\"true\", height=\"0.5\", URL=f\"https://modelseed.org/biochem/compounds/{metID.replace('_e0', '')}\", tooltip=metID.replace('_e0', ''))\n",
+    "        metID = metID.replace('_e0', '')\n",
+    "        met = msdb.compounds.get_by_id(metID)\n",
+    "        cpdNum = str(int(metID.replace(\"cpd\", \"\")))\n",
+    "        mets_subgraph.node(cpdNum, fixedsize=\"true\", height=\"0.5\", URL=f\"https://modelseed.org/biochem/compounds/{metID}\", tooltip=met.name)\n",
     "        # mets_dict[metID] = letter\n",
     "    # for metID in metabolites:\n",
     "    #     mets_subgraph.node(metID)\n",
@@ -879,23 +893,291 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "7dcaee99-ef02-4da2-aa0f-4995b892a222",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', '_annotation', '_bound', '_id', '_model', '_reaction', '_repr_html_', '_set_id_with_model', 'abbr', 'annotation', 'charge', 'compartment', 'constraint', 'copy', 'delta_g', 'delta_g_error', 'elements', 'flags', 'formula', 'formula_weight', 'id', 'inchi', 'inchi_key', 'is_abstract', 'is_cofactor', 'is_core', 'is_obsolete', 'linked_compound', 'mass', 'model', 'name', 'names', 'notes', 'pka', 'pkb', 'reactions', 'remove_from_model', 'seed_id', 'shadow_price', 'smiles', 'source', 'summary', 'to_template_compartment_compound', 'y']\n",
+      "his-L\n",
+      "{'his__L'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "met = msdb.compounds.get_by_id(\"cpd00119\")\n",
+    "print(dir(met))\n",
+    "print(met.abbr)\n",
+    "print(met.annotation[\"BiGG\"])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 159,
    "id": "ce7ecfaa-9575-416b-b5d6-7ab4304778b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metabolite/Donor ID\n",
+      "4abzglu-e_e0          0.016678\n",
+      "alaasp_e0            60.853475\n",
+      "alathr_e0           202.935875\n",
+      "argarg_e0          -487.471946\n",
+      "cpd00001_e0           0.000000\n",
+      "                      ...     \n",
+      "sphmyln_bt_e0         0.405723\n",
+      "tartr-D-e_e0        665.960738\n",
+      "zz_Environment        0.000000\n",
+      "zz_Species1       10167.380587\n",
+      "zz_Species2       10879.346491\n",
+      "Name: Environment, Length: 126, dtype: float64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Environment</th>\n",
+       "      <th>Species1</th>\n",
+       "      <th>Species2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4abzglu-e</th>\n",
+       "      <td>0.016678</td>\n",
+       "      <td>-0.016678</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>alaasp</th>\n",
+       "      <td>60.853475</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-60.853475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>alathr</th>\n",
+       "      <td>202.935875</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-202.935875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>argarg</th>\n",
+       "      <td>-487.471946</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>487.471946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cpd00001</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>623.766026</td>\n",
+       "      <td>-422.643669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sphmyln_bt</th>\n",
+       "      <td>0.405723</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.405723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tartr-D-e</th>\n",
+       "      <td>665.960738</td>\n",
+       "      <td>-665.960738</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zz_Environment</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>12310.360806</td>\n",
+       "      <td>5124.503362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zz_Species1</th>\n",
+       "      <td>10167.380587</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>132.683529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zz_Species2</th>\n",
+       "      <td>10879.346491</td>\n",
+       "      <td>2192.935391</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>126 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Environment      Species1     Species2\n",
+       "4abzglu-e           0.016678     -0.016678     0.000000\n",
+       "alaasp             60.853475      0.000000   -60.853475\n",
+       "alathr            202.935875      0.000000  -202.935875\n",
+       "argarg           -487.471946      0.000000   487.471946\n",
+       "cpd00001            0.000000    623.766026  -422.643669\n",
+       "...                      ...           ...          ...\n",
+       "sphmyln_bt          0.405723      0.000000    -0.405723\n",
+       "tartr-D-e         665.960738   -665.960738     0.000000\n",
+       "zz_Environment      0.000000  12310.360806  5124.503362\n",
+       "zz_Species1     10167.380587      0.000000   132.683529\n",
+       "zz_Species2     10879.346491   2192.935391     0.000000\n",
+       "\n",
+       "[126 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Environment</th>\n",
+       "      <th>Species1</th>\n",
+       "      <th>Species2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Metabolite ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>cpd00001</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>623.766026</td>\n",
+       "      <td>-422.643669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cpd00009</th>\n",
+       "      <td>-855.401716</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>-144.598284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cpd00020</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>-1000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cpd00039</th>\n",
+       "      <td>2.020597</td>\n",
+       "      <td>26.970192</td>\n",
+       "      <td>-28.990789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cpd00054</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-121.452199</td>\n",
+       "      <td>121.452199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cpd00065</th>\n",
+       "      <td>-993.788937</td>\n",
+       "      <td>998.582955</td>\n",
+       "      <td>-4.794019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cpd00107</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-11.231330</td>\n",
+       "      <td>11.231330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cpd00119</th>\n",
+       "      <td>148.361772</td>\n",
+       "      <td>11.981715</td>\n",
+       "      <td>-160.343487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cpd00132</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>20.397417</td>\n",
+       "      <td>-20.397417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cpd00221</th>\n",
+       "      <td>-438.449904</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>-561.550096</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Environment     Species1     Species2\n",
+       "Metabolite ID                                       \n",
+       "cpd00001          0.000000   623.766026  -422.643669\n",
+       "cpd00009       -855.401716  1000.000000  -144.598284\n",
+       "cpd00020          0.000000  1000.000000 -1000.000000\n",
+       "cpd00039          2.020597    26.970192   -28.990789\n",
+       "cpd00054          0.000000  -121.452199   121.452199\n",
+       "cpd00065       -993.788937   998.582955    -4.794019\n",
+       "cpd00107          0.000000   -11.231330    11.231330\n",
+       "cpd00119        148.361772    11.981715  -160.343487\n",
+       "cpd00132          0.000000    20.397417   -20.397417\n",
+       "cpd00221       -438.449904  1000.000000  -561.550096"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run ../../../modelseedpy/community/mssteadycom.py\n",
     "\n",
     "\n",
-    "dot_code = MSSteadyCom.visual_interactions(cross_feeding_df)"
+    "dot_code = MSSteadyCom.visual_interactions(cross_feeding_df, msdb=msdb)"
    ]
   },
   {
