--- a/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
+++ b/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
@@ -3808,20 +3808,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9a1eadf6-9962-4b6e-b2ca-00cc227f89e9",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cobrakbase 0.3.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ../../../modelseedpy/community/mssmetana.py\n",
     "\n",
@@ -4027,7 +4019,10 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "9cfbd298-eddf-409e-87e5-186ef722115b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4141,6 +4136,72 @@
     "%run ../../../modelseedpy/core/report.py\n",
     "\n",
     "reportHTML = smetana_report(many_media_df, many_media_mets, \"many_media_sampling.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7585a6e-c56c-44f0-a779-38fb9bef6f3c",
+   "metadata": {},
+   "source": [
+    "# CIP method comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b23ba6f4-8404-4879-b0f4-dbc1bc29b516",
+   "metadata": {},
+   "source": [
+    "### Aggregate compounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0187c5cd-e8b0-4cb8-9820-88cd186fa912",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'EX_cpd00060_e0', 'EX_cpd00142_e0', 'EX_cpd00036_e0', 'EX_cpd00067_e0', 'EX_cpd00246_e0', 'EX_cpd00033_e0', 'EX_cpd00035_e0', 'EX_cpd00082_e0', 'EX_cpd00122_e0', 'EX_cpd00012_e0', 'EX_cpd00053_e0', 'EX_cpd00013_e0', 'EX_cpd00047_e0', 'EX_cpd00249_e0', 'EX_cpd00009_e0', 'EX_cpd00159_e0', 'EX_cpd00075_e0', 'EX_cpd00023_e0', 'EX_cpd00041_e0', 'EX_cpd00794_e0', 'EX_cpd03279_e0', 'EX_cpd00218_e0', 'EX_cpd00011_e0', 'EX_cpd00129_e0'} 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run ../../../modelseedpy/community/mssmetana.py\n",
+    "\n",
+    "costless_mets, num_costless_mets = MSSmetana.cip(member_models=models)\n",
+    "print(costless_mets, num_costless_mets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84b5d0d7-6f36-4272-8190-3eb39baf208c",
+   "metadata": {},
+   "source": [
+    "### Subset of MIP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "62babcf0-2c45-419f-8ca6-85ba2949b802",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['EX_cpd00067_e0', 'EX_cpd00053_e0', 'EX_cpd00060_e0', 'EX_cpd00794_e0'] 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run ../../../modelseedpy/community/mssmetana.py\n",
+    "\n",
+    "mip_costless_mets, num_mip_costless_mets = MSSmetana.mip(member_models=models, costless=True)\n",
+    "print(mip_costless_mets, num_mip_costless_mets)"
    ]
   },
   {
