SMETANA development and updates

--- a/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
+++ b/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
@@ -2512,7 +2512,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Andrew Freiburger\\Documents\\Argonne\\ModelSEED\\ModelSEEDpy\\modelseedpy\\community\\mssmetana.py:405: DeprecationWarning: invalid escape sequence \\[\n",
+      "C:\\Users\\Andrew Freiburger\\Documents\\Argonne\\ModelSEED\\ModelSEEDpy\\modelseedpy\\community\\mssmetana.py:417: DeprecationWarning: invalid escape sequence \\[\n",
       "  cross_fed_exIDs = [re.sub(\"(root\\['|'\\])\", \"\", x) for x in interact_diff[\"dictionary_item_removed\"]]\n"
      ]
     }
@@ -3808,12 +3808,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9a1eadf6-9962-4b6e-b2ca-00cc227f89e9",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cobrakbase 0.3.1\n"
+     ]
+    }
+   ],
    "source": [
     "%run ../../../modelseedpy/community/mssmetana.py\n",
     "\n",
@@ -4202,6 +4210,172 @@
     "\n",
     "mip_costless_mets, num_mip_costless_mets = MSSmetana.mip(member_models=models, costless=True)\n",
     "print(mip_costless_mets, num_mip_costless_mets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7d0a3a9-a5ea-4fed-ae66-ec27931cdc04",
+   "metadata": {},
+   "source": [
+    "### Additional scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6bb96f7e-3478-42ac-8b3b-f186f52b7d86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(['EX_cpd00067_e0', 'EX_cpd00119_e0', 'EX_cpd00137_e0', 'EX_cpd00118_e0', 'EX_cpd00132_e0', 'EX_cpd00051_e0', 'EX_cpd00027_e0', 'EX_cpd00311_e0', 'EX_cpd00036_e0', 'EX_cpd00161_e0', 'EX_cpd00024_e0', 'EX_cpd00069_e0', 'EX_cpd00164_e0', 'EX_cpd00054_e0', 'EX_cpd00136_e0', 'EX_cpd00053_e0', 'EX_cpd00107_e0', 'EX_cpd00066_e0', 'EX_cpd00039_e0', 'EX_cpd00084_e0', 'EX_cpd00276_e0', 'EX_cpd00128_e0', 'EX_cpd00307_e0', 'EX_cpd00166_e0', 'EX_cpd00794_e0', 'EX_cpd00654_e0', 'EX_cpd00106_e0', 'EX_cpd15560_e0', 'EX_cpd00001_e0', 'EX_cpd00060_e0', 'EX_cpd00080_e0'], 31), (['EX_cpd00067_e0', 'EX_cpd00036_e0', 'EX_cpd00053_e0', 'EX_cpd00794_e0', 'EX_cpd00060_e0'], 5), 0.4773145712781245]\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run ../../../modelseedpy/community/mssmetana.py\n",
+    "\n",
+    "outputs = MSSmetana.mip(member_models=models, costless=True, pc=True, multi_output=True)\n",
+    "print(outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "755839d6-eff2-4037-b8d3-bafd82843843",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(['EX_cpd00067_e0',\n",
+       "   'EX_cpd00119_e0',\n",
+       "   'EX_cpd00137_e0',\n",
+       "   'EX_cpd00118_e0',\n",
+       "   'EX_cpd00132_e0',\n",
+       "   'EX_cpd00051_e0',\n",
+       "   'EX_cpd00027_e0',\n",
+       "   'EX_cpd00311_e0',\n",
+       "   'EX_cpd00036_e0',\n",
+       "   'EX_cpd00161_e0',\n",
+       "   'EX_cpd00024_e0',\n",
+       "   'EX_cpd00069_e0',\n",
+       "   'EX_cpd00164_e0',\n",
+       "   'EX_cpd00054_e0',\n",
+       "   'EX_cpd00136_e0',\n",
+       "   'EX_cpd00053_e0',\n",
+       "   'EX_cpd00107_e0',\n",
+       "   'EX_cpd00066_e0',\n",
+       "   'EX_cpd00039_e0',\n",
+       "   'EX_cpd00084_e0',\n",
+       "   'EX_cpd00276_e0',\n",
+       "   'EX_cpd00128_e0',\n",
+       "   'EX_cpd00307_e0',\n",
+       "   'EX_cpd00166_e0',\n",
+       "   'EX_cpd00794_e0',\n",
+       "   'EX_cpd00654_e0',\n",
+       "   'EX_cpd00106_e0',\n",
+       "   'EX_cpd15560_e0',\n",
+       "   'EX_cpd00001_e0',\n",
+       "   'EX_cpd00060_e0',\n",
+       "   'EX_cpd00080_e0'],\n",
+       "  31),\n",
+       " (['EX_cpd00067_e0',\n",
+       "   'EX_cpd00036_e0',\n",
+       "   'EX_cpd00053_e0',\n",
+       "   'EX_cpd00794_e0',\n",
+       "   'EX_cpd00060_e0'],\n",
+       "  5),\n",
+       " 0.4773145712781245]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac6987d5-f4b6-4eed-a727-dcfc46598129",
+   "metadata": {},
+   "source": [
+    "### Debug the KBase_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1910dc35-3772-4f87-9cdd-0af91e972010",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "row1\r"
+     ]
+    }
+   ],
+   "source": [
+    "GCF_001422165 = kbase_api.get_from_ws(\"136582/695/1\") ; GCF_001423965 = kbase_api.get_from_ws(\"136582/601/1\") ; GCF_001424505 = kbase_api.get_from_ws(\"136582/509/1\") ; GCF_001421245 = kbase_api.get_from_ws(\"136582/437/1\")\n",
+    "print(\"row1\", end=\"\\r\")\n",
+    "GCF_001424455 = kbase_api.get_from_ws(\"136582/683/1\") ; GCF_001422325 = kbase_api.get_from_ws(\"136582/605/1\") ; GCF_001422815 = kbase_api.get_from_ws(\"136582/611/1\") ; GCF_001424185 = kbase_api.get_from_ws(\"136582/834/1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e8f800ba-00bf-4e2a-838b-900772842ddd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = [GCF_001422165, GCF_001423965, GCF_001424505, GCF_001421245, GCF_001424455, GCF_001422325, GCF_001422815, GCF_001424185]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "41e525b0-2e9e-4c2d-9c58-0d79ad2f1cf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The minimal flux media consists of 38 compounds and a 1.9202602818155337 total influx, with a growth value of 0.09999999999860754\n",
+      "The minimal flux media consists of 44 compounds and a 4.151288539454356 total influx, with a growth value of 0.10000000000062123\n",
+      "The minimal media of all members:\n",
+      "{'GCF_001421425.1.RAST.fbamodel': {'media': {'EX_cpd00051_e0': 0.024669682270134104, 'EX_cpd00209_e0': 0.41906777585785215, 'EX_cpd00264_e0': 0.0002806159159591311, 'EX_cpd00030_e0': 0.00028061591595913103, 'EX_cpd00149_e0': 0.00028061591595913114, 'EX_cpd00393_e0': 0.0008418477478773926, 'EX_cpd00028_e0': 0.0002806159159591311, 'EX_cpd00128_e0': 0.0009156220198639775, 'EX_cpd00355_e0': 1.182846914348074, 'EX_cpd00107_e0': 0.03753888475401271, 'EX_cpd00104_e0': 0.00028061591595913103, 'EX_cpd00307_e0': 0.010339047120311001, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00156_e0': 0.035223318909162506, 'EX_cpd00065_e0': 0.004720191914502181, 'EX_cpd00179_e0': 0.047889958579162846, 'EX_cpd00793_e0': 0.0002806159159591324, 'EX_cpd01080_e0': 0.0249162759544541, 'EX_cpd10515_e0': 0.0008418477478773931, 'EX_cpd00136_e0': 0.00028061591595913114, 'EX_cpd00017_e0': 0.013060758175035833, 'EX_cpd00063_e0': 0.00028061591595913103, 'EX_cpd00034_e0': 0.0002806159159591311, 'EX_cpd00007_e0': 0.02995134166266791, 'EX_cpd00220_e0': 0.0008418477478773936, 'EX_cpd03847_e0': 0.0025010597710868583, 'EX_cpd00066_e0': 0.015451949003134506, 'EX_cpd00069_e0': 0.012067660460661203, 'EX_cpd00644_e0': 0.0005612318319183266, 'EX_cpd00058_e0': 0.0002806159159591311, 'EX_cpd00205_e0': 0.0002806159159591311, 'EX_cpd00311_e0': 0.015469367674970164, 'EX_cpd00099_e0': 0.0002806159159591311, 'EX_cpd00119_e0': 0.007926360007371592, 'EX_cpd00254_e0': 0.00028061591595913114, 'EX_cpd00268_e0': 0.004228248484414622, 'EX_cpd00048_e0': 0.0002806159159591311, 'EX_cpd00322_e0': 0.02417985103372351}}, 'GCF_001421355.1.RAST.fbamodel': {'media': {'EX_cpd00051_e0': 0.024669682270134108, 'EX_cpd00264_e0': 0.00028061591595913114, 'EX_cpd00080_e0': 0.0809745404760167, 'EX_cpd00030_e0': 0.00028061591595913114, 'EX_cpd00149_e0': 0.00028061591595913103, 'EX_cpd00393_e0': 0.0008418477478773941, 'EX_cpd00028_e0': 0.00028061591595913103, 'EX_cpd00132_e0': 0.020083080692834803, 'EX_cpd00184_e0': 0.0010603832509573266, 'EX_cpd00107_e0': 0.03753888475401271, 'EX_cpd00104_e0': 0.0002806159159591311, 'EX_cpd00137_e0': 1.3377814852925072, 'EX_cpd00118_e0': 0.00028061591595913114, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00277_e0': 0.002143191525201281, 'EX_cpd00156_e0': 0.035223318909162506, 'EX_cpd00065_e0': 0.004720191914502181, 'EX_cpd00039_e0': 0.028543802049017904, 'EX_cpd00179_e0': 0.7846263481831195, 'EX_cpd00218_e0': 0.0005612318324762591, 'EX_cpd00793_e0': 0.0002806159159591311, 'EX_cpd00116_e0': 4.0180505938991466e-20, 'EX_cpd10515_e0': 0.0008418477478773932, 'EX_cpd00136_e0': 0.00028061591595913114, 'EX_cpd00017_e0': 0.013060758175035835, 'EX_cpd00063_e0': 0.00028061591595913114, 'EX_cpd00794_e0': 0.01000423908435776, 'EX_cpd00034_e0': 0.00028061591595913114, 'EX_cpd00007_e0': 0.0007015397898978277, 'EX_cpd11589_e0': 0.045353149289578454, 'EX_cpd00220_e0': 0.000841847747877378, 'EX_cpd00164_e0': 0.8139742085313924, 'EX_cpd00066_e0': 0.015451949003134503, 'EX_cpd00069_e0': 0.012067660460661203, 'EX_cpd00644_e0': 0.0005612318318397562, 'EX_cpd00041_e0': 0.8346095562300598, 'EX_cpd00058_e0': 0.00028061591595913103, 'EX_cpd00205_e0': 0.0002806159159591311, 'EX_cpd00099_e0': 0.000280615915959131, 'EX_cpd00084_e0': 0.008456496968363727, 'EX_cpd00119_e0': 0.007926360007389598, 'EX_cpd00254_e0': 0.0002806159159591311, 'EX_cpd00048_e0': 0.00028061591595913103, 'EX_cpd00322_e0': 0.024179851033723502}}}\n",
+      "\n",
+      "Examining the 1 model pairs\n",
+      "Loading 32 workers and computing the scores 2023-05-04 22:57:50.042020\n",
+      "(                          model1                         model2  \\\n",
+      "0  GCF_001421425.1.RAST.fbamodel  GCF_001421355.1.RAST.fbamodel   \n",
+      "\n",
+      "             media       mro_model1       mro_model2 cip mip costless_mip  \\\n",
+      "0  R2A_edition_003  0.78947 (30/38)  0.68182 (30/44)  25  28            4   \n",
+      "\n",
+      "         pc       gyd       RFC  \n",
+      "0  0.477315  0.962851  0.334624  , <itertools.chain object at 0x000001C3AFB41C10>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run ../../../modelseedpy/community/mssmetana.py\n",
+    "\n",
+    "from os import cpu_count\n",
+    "\n",
+    "outputs = MSSmetana.kbase_output(models, environments=r2a_media, kbase_obj=kbase_api, costless=True, pc=True, pool_size=cpu_count()/2)\n",
+    "print(outputs)"
    ]
   },
   {
