--- a/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
+++ b/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
@@ -38,7 +38,7 @@
     "from time import process_time\n",
     "import warnings\n",
     "warnings.filterwarnings(action='once')\n",
-    "# %run ../../../modelseedpy/community/mssmetana.py"
+    "# %run ../../../modelseedpy/community/mscommscores.py"
    ]
   },
   {
@@ -73,7 +73,7 @@
     "def test_pair(member1, member2, community):\n",
     "    try:\n",
     "        start_time = process_time()\n",
-    "        comm = MSSmetana([member1, member2], community)\n",
+    "        comm = MSCommScores([member1, member2], community)\n",
     "        comm.all_scores()\n",
     "        end_time = process_time()\n",
     "\n",
@@ -719,8 +719,8 @@
     }
    ],
    "source": [
-    "%run ../../../modelseedpy/community/mssmetana.py\n",
-    "comm = MSSmetana([AP49, BC15], AP49_BC15_model)\n",
+    "%run ../../../modelseedpy/community/mscommscores.py\n",
+    "comm = MSCommScores([AP49, BC15], AP49_BC15_model)\n",
     "print(len(comm.media), comm.media)"
    ]
   },
@@ -1443,8 +1443,8 @@
     }
    ],
    "source": [
-    "%run ../../../modelseedpy/community/mssmetana.py\n",
-    "comm = MSSmetana([AP49, BC15], AP49_BC15_model)\n",
+    "%run ../../../modelseedpy/community/mscommscores.py\n",
+    "comm = MSCommScores([AP49, BC15], AP49_BC15_model)\n",
     "comm.mu_score()"
    ]
   },
@@ -1458,7 +1458,7 @@
    },
    "outputs": [],
    "source": [
-    "%run ../../../modelseedpy/community/mssmetana.py\n",
+    "%run ../../../modelseedpy/community/mscommscores.py\n",
     "comm.mp = {'Sphingobium_AP49_pacbio_v2.RAST.fbamodel': {'cpd00797_e0', 'cpd00036_e0', 'cpd00116_e0', 'cpd03279_e0', 'cpd00053_e0', 'cpd00013_e0', 'cpd00412_e0', 'cpd00023_e0', 'cpd00276_e0', 'cpd00182_e0', 'cpd00438_e0', 'cpd00122_e0', 'cpd00184_e0', \n",
     "                                                        'cpd00246_e0', 'cpd00084_e0', 'cpd00249_e0', 'cpd00033_e0', 'cpd00060_e0', 'cpd00075_e0', 'cpd00039_e0', 'cpd00067_e0', 'cpd00011_e0', 'cpd00137_e0', 'cpd00588_e0', 'cpd00054_e0', 'cpd00001_e0', \n",
     "                                                        'cpd00041_e0', 'cpd00129_e0', 'cpd00161_e0', 'cpd00138_e0', 'cpd00132_e0'}, \n",
@@ -1489,8 +1489,8 @@
    },
    "outputs": [],
    "source": [
-    "%run ../../../modelseedpy/community/mssmetana.py\n",
-    "comm = MSSmetana([AP49, BC15], AP49_BC15_model)\n",
+    "%run ../../../modelseedpy/community/mscommscores.py\n",
+    "comm = MSCommScores([AP49, BC15], AP49_BC15_model)\n",
     "# %time comm.mip_score()"
    ]
   },
@@ -1501,8 +1501,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %run ../../../modelseedpy/community/mssmetana.py\n",
-    "# comm = MSSmetana([AP49, BC15], AP49_BC15_model)\n",
+    "# %run ../../../modelseedpy/community/mscommscores.py\n",
+    "# comm = MSCommScores([AP49, BC15], AP49_BC15_model)\n",
     "%time comm.sc_score()"
    ]
   },
@@ -2533,7 +2533,7 @@
     "from time import process_time\n",
     "import warnings\n",
     "warnings.filterwarnings(action='once')\n",
-    "%run ../../../modelseedpy/community/mssmetana.py"
+    "%run ../../../modelseedpy/community/mscommscores.py"
    ]
   },
   {
@@ -2591,9 +2591,6 @@
    "execution_count": null,
    "id": "a2f79019-ad46-4fc0-8de6-78d0441f374f",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2722,9 +2719,6 @@
    "execution_count": 3,
    "id": "e29fe773-16a1-4d7e-925b-1503fae15cf9",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -2740,9 +2734,6 @@
    "execution_count": 11,
    "id": "770f1f94-8cf2-4556-88bf-6ef9e5449a96",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -2783,8 +2774,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     },
     "tags": []
    },
@@ -3823,7 +3813,7 @@
     }
    ],
    "source": [
-    "%run ../../../modelseedpy/community/mssmetana.py\n",
+    "%run ../../../modelseedpy/community/mscommscores.py\n",
     "\n",
     "import os\n",
     "local_cobrakbase_path = os.path.join('C:', 'Users', 'Andrew Freiburger','Documents','Argonne','cobrakbase')\n",
@@ -3841,7 +3831,7 @@
     "\n",
     "# RAST_genomes = {\"GCF_001421425\": GCF_001421425, \"GCF_001421355\": GCF_001421355}\n",
     "models = [GCF_001421425, GCF_001421355]\n",
-    "# MSSmetana.rfc(models, kbase_object=kbase_api)"
+    "# MSCommScores.rfc(models, kbase_object=kbase_api)"
    ]
   },
   {
@@ -3859,8 +3849,8 @@
     }
    ],
    "source": [
-    "%run ../../../modelseedpy/community/mssmetana.py\n",
-    "output = MSSmetana.mip(member_models=models, environment=r2a_media, costless=True)"
+    "%run ../../../modelseedpy/community/mscommscores.py\n",
+    "output = MSCommScores.mip(member_models=models, environment=r2a_media, costless=True)"
    ]
   },
   {
@@ -3935,13 +3925,13 @@
    "source": [
     "%%time\n",
     "\n",
-    "%run ../../../modelseedpy/community/mssmetana.py\n",
+    "%run ../../../modelseedpy/community/mscommscores.py\n",
     "\n",
-    "# genomes = MSSmetana.get_all_genomes_from_ws(136582, kbase_api)\n",
-    "# genome_similarities = MSSmetana.RAST_functionality(genomes)\n",
+    "# genomes = MSCommScores.get_all_genomes_from_ws(136582, kbase_api)\n",
+    "# genome_similarities = MSCommScores.RAST_functionality(genomes)\n",
     "import os\n",
     "\n",
-    "df, mets = MSSmetana.kbase_output(pmi_models, \n",
+    "df, mets = MSCommScores.kbase_output(pmi_models, \n",
     "                                  mem_media=PMI_models_media, \n",
     "                                  pairs=negative_interactions, environment=r2a_media, kbase_obj=kbase_api, \n",
     "                                  # lazy_load=True, \n",
@@ -3980,13 +3970,13 @@
    "source": [
     "%%time\n",
     "\n",
-    "%run ../../../modelseedpy/community/mssmetana.py\n",
+    "%run ../../../modelseedpy/community/mscommscores.py\n",
     "\n",
-    "# genomes = MSSmetana.get_all_genomes_from_ws(136582, kbase_api)\n",
-    "# genome_similarities = MSSmetana.RAST_functionality(genomes)\n",
+    "# genomes = MSCommScores.get_all_genomes_from_ws(136582, kbase_api)\n",
+    "# genome_similarities = MSCommScores.RAST_functionality(genomes)\n",
     "import os\n",
     "\n",
-    "df, mets = MSSmetana.kbase_output(pmi_models, \n",
+    "df, mets = MSCommScores.kbase_output(pmi_models, \n",
     "                                  mem_media=PMI_models_media, \n",
     "                                  pairs=negative_interactions, environment=r2a_media, kbase_obj=kbase_api, \n",
     "                                  # lazy_load=True, \n",
@@ -4117,9 +4107,9 @@
     }
    ],
    "source": [
-    "%run ../../../modelseedpy/community/mssmetana.py\n",
+    "%run ../../../modelseedpy/community/mscommscores.py\n",
     "\n",
-    "many_media_df, many_media_mets = MSSmetana.kbase_output(pmi_models, mem_media=PMI_models_media, pairs=negative_interactions, environments=media, kbase_obj=kbase_api)"
+    "many_media_df, many_media_mets = MSCommScores.kbase_output(pmi_models, mem_media=PMI_models_media, pairs=negative_interactions, environments=media, kbase_obj=kbase_api)"
    ]
   },
   {
@@ -4143,7 +4133,7 @@
    "source": [
     "%run ../../../modelseedpy/core/report.py\n",
     "\n",
-    "reportHTML = smetana_report(many_media_df, many_media_mets, \"many_media_sampling.html\")"
+    "reportHTML = commscores_report(many_media_df, many_media_mets, \"many_media_sampling.html\")"
    ]
   },
   {
@@ -4177,9 +4167,9 @@
     }
    ],
    "source": [
-    "%run ../../../modelseedpy/community/mssmetana.py\n",
+    "%run ../../../modelseedpy/community/mscommscores.py\n",
     "\n",
-    "costless_mets, num_costless_mets = MSSmetana.cip(member_models=models)\n",
+    "costless_mets, num_costless_mets = MSCommScores.cip(member_models=models)\n",
     "print(costless_mets, num_costless_mets)"
    ]
   },
@@ -4206,9 +4196,9 @@
     }
    ],
    "source": [
-    "%run ../../../modelseedpy/community/mssmetana.py\n",
+    "%run ../../../modelseedpy/community/mscommscores.py\n",
     "\n",
-    "mip_costless_mets, num_mip_costless_mets = MSSmetana.mip(member_models=models, costless=True)\n",
+    "mip_costless_mets, num_mip_costless_mets = MSCommScores.mip(member_models=models, costless=True)\n",
     "print(mip_costless_mets, num_mip_costless_mets)"
    ]
   },
@@ -4235,9 +4225,9 @@
     }
    ],
    "source": [
-    "%run ../../../modelseedpy/community/mssmetana.py\n",
+    "%run ../../../modelseedpy/community/mscommscores.py\n",
     "\n",
-    "outputs = MSSmetana.mip(member_models=models, costless=True, pc=True, multi_output=True)\n",
+    "outputs = MSCommScores.mip(member_models=models, costless=True, pc=True, multi_output=True)\n",
     "print(outputs)"
    ]
   },
@@ -4371,11 +4361,11 @@
     }
    ],
    "source": [
-    "%run ../../../modelseedpy/community/mssmetana.py\n",
+    "%run ../../../modelseedpy/community/mscommscores.py\n",
     "\n",
     "from os import cpu_count\n",
     "\n",
-    "outputs = MSSmetana.kbase_output(models, environments=r2a_media, kbase_obj=kbase_api, costless=True, pc=True, \n",
+    "outputs = MSCommScores.kbase_output(models, environments=r2a_media, kbase_obj=kbase_api, costless=True, pc=True, \n",
     "                                 # pool_size=cpu_count()/2\n",
     "                                )\n",
     "print(outputs)"
@@ -4575,7 +4565,7 @@
    "id": "a3f98436-281c-4672-b31b-ef5c72ba0876",
    "metadata": {},
    "source": [
-    "## smetana score"
+    "## commscores score"
    ]
   },
   {
@@ -4613,9 +4603,9 @@
     "pyplot.scatter([1]*len(posInteractions), posInteractions)\n",
     "pyplot.scatter([2]*len(negInteractions), negInteractions)\n",
     "pyplot.xlabel(\"Interaction type\")\n",
-    "pyplot.ylabel(\"smetana score (syntrophy potential)\")\n",
+    "pyplot.ylabel(\"commscores score (syntrophy potential)\")\n",
     "pyplot.text(1.6,62, f\"p-value: {sigfig.round(ttest.pvalue, sigfigs=3)}\", fontsize=\"x-large\")\n",
-    "fig.savefig(\"smetana comparion.jpg\")\n",
+    "fig.savefig(\"commscores comparion.jpg\")\n",
     "# display(fig)\n",
     "# pyplot.show()"
    ]
@@ -4805,8 +4795,8 @@
    ],
    "source": [
     "from pandas import read_csv\n",
-    "# combined_df = read_csv(\"combined_smetana_report.csv\").drop([\"Unnamed: 0\"], axis=1)\n",
-    "combined_df = read_csv(\"all_v_all_smetana.csv\").drop([\"Unnamed: 0\"], axis=1)\n",
+    "# combined_df = read_csv(\"combined_commscores_report.csv\").drop([\"Unnamed: 0\"], axis=1)\n",
+    "combined_df = read_csv(\"all_v_all_commscores.csv\").drop([\"Unnamed: 0\"], axis=1)\n",
     "combined_df"
    ]
   },
